# sparseio

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: .editorconfig  config.toml
.github/workflows/: ci-macos.yml  ci-ubuntu.yml  code-quality.yml  integration.yml  quality.yml  unit.yml
docs/: CI.md  index.md
docs/architecture/: API.md  CAS.md  index.md
docs/static/: sparseio-cas-split-diagram.excalidraw  sparseio-sample-implementation.excalidraw
examples/: file_to_file.md  file_to_file.rs
examples/common/: mod.rs  sparse_fill_visualizer.rs  sparse_materialization.rs  utils.rs
scripts/animations/: README.md  common.sh
scripts/animations/general-read/: render.sh  scene.py
src/: coverage.rs  debug.rs  error.rs  inner.rs  lib.rs  reader.rs  shared.rs  storage.rs  viewer.rs  writer.rs
src/common/: chunks.rs  codec.rs  mod.rs
src/metadata/: mod.rs  spec.rs
src/sources/: file.rs  http.rs  memory.rs  mod.rs  opendal.rs
src/utils/: counting.rs  file.rs  fixture.rs  flaky.rs  materialization.rs  mod.rs  oracle.rs  temp.rs  tracing.rs
tests/: core.rs  file.rs  harness.rs  http.rs  opendal.rs
