[package]
name = "sparseio"
authors = ["Matthew Hambrecht (hambrechtmatt@gmail.com)"]
version = "0.0.0"
edition = "2024"
description = "A library for coordinating sparse, out-of-order byte-range fetching and materialization of large objects."
homepage = "https://github.com/mhambre/sparseio"
repository = "https://github.com/mhambre/sparseio"
license = "Apache-2.0"

[features]
file = ["dep:libc"]
http = ["dep:reqwest"]

[[example]]
name = "file_to_file"
path = "examples/file_to_file.rs"
required-features = ["file"]

[dependencies]
tokio = { version = "1.51.0", features = ["sync", "macros", "fs", "io-util", "rt-multi-thread"] }
futures = "0.3.32"
bytes = "1.11.1"
libc = { version = "0.2", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
async-stream = "0.3.6"
rand = "0.8.5"
