[package]
name = "sparseio"
authors = ["Matthew Hambrecht (hambrechtmatt@gmail.com)"]
version = "0.0.1"
rust-version = "1.94.0"
edition = "2024"
description = "A library for coordinating sparse, out-of-order byte-range fetching and materialization of large objects."
documentation = "https://docs.rs/sparseio"
homepage = "https://crates.io/crates/sparseio"
repository = "https://github.com/mhambre/sparseio"
categories = ["filesystem"]
keywords = ["storage", "tokio", "fs", "filesystem", "stream"]
readme = "README.md"
license = "Apache-2.0"

[features]
# For debug test harnesses users can use to test their trait implementations
debug = ["test-utils"]

# Reader/Writer trait implementations
impl-file = ["dep:libc", "test-utils"]
impl-opendal = ["dep:opendal"]
metadata-memory = []

# Example deps
example-huggingface = ["opendal-huggingface"]

# Feature groups (shouldn't be called directly)
opendal-huggingface = [
    "impl-opendal",
    "opendal/executors-tokio",
    "opendal/reqwest-rustls-tls",
    "opendal/services-huggingface",
]
test-utils = ["dep:tempfile", "dep:tracing-subscriber", "dep:tracing"]

[package.metadata.docs.rs]
features = ["debug", "impl-file", "impl-opendal", "metadata-memory"]

[[example]]
name = "file_to_file"
path = "examples/file_to_file.rs"
required-features = ["impl-file", "metadata-memory"]

[[example]]
name = "hf_file_bench"
path = "examples/hf_file_bench.rs"
required-features = ["example-huggingface", "impl-file", "metadata-memory"]

[dependencies]
tokio = { version = "1.51.0", features = [
    "sync",
    "macros",
    "fs",
    "io-util",
    "rt-multi-thread",
    "time",
] }
futures = "0.3.32"
bytes = "1.11.1"
bincode = { version = "2", features = ["serde"] }
hex = "0.4"
libc = { version = "0.2", optional = true }
opendal = { version = "0.56", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tracing = { version = "0.1.44", default-features = false, features = [
    "std",
], optional = true }
tempfile = { version = "3.27.0", optional = true }
tracing-subscriber = { version = "0.3.23", features = [
    "fmt",
    "ansi",
], optional = true }

[dev-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
async-stream = "0.3.6"
rand = "0.8.5"
tempfile = "3.27.0"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", features = ["fmt", "ansi"] }
opendal = { version = "0.56", default-features = false, features = [
    "services-memory",
] }
reqwest = { version = "0.13.3", default-features = false, features = [
    "rustls",
] }
